<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">


    <Button
        android:id="@+id/bt_create"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/bt_create" />

    <Button
        android:id="@+id/bt_read"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/bt_read" />

    <Button
        android:id="@+id/bt_update"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/bt_update" />

    <Button
        android:id="@+id/bt_delete"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/bt_delete" />


</LinearLayout>